fix: cart items count badge overlap label on mobile screen
Add additional media queries which increase left property

--- a/Shopping-Cart/src/components/Navigation/navigation.module.css
+++ b/Shopping-Cart/src/components/Navigation/navigation.module.css
@@ -129,11 +129,29 @@
 	}
 }
 
+@media (max-width: 500px) {
+	.navMenuWrapper {
+		width: 45%;
+	}
+}
+
 @media (max-width: 450px) {
 	.navMenuWrapper {
 		width: 100%;
 	}
 	:global(.ant-menu-item):last-child {
 		left: 45%;
+	}
+}
+
+@media (max-width: 310px) {
+	:global(.ant-menu-item):last-child {
+		left: 50%;
+	}
+}
+
+@media (max-width: 270px) {
+	:global(.ant-menu-item):last-child {
+		left: 58%;
 	}
 }
